@@ -6,6 +6,7 @@ Breakout Changelog
 
 * Fixed: Site Identity section in customizer not showing.
 * Fixed: Minor admin styling issues with WordPress 4.3.
+* Fixed: Display issues with new post embedding, introduced in WordPress 4.4.
 * Removed: Non-working Tabs element selections for placing navigation.
 
 --------------------------------------------------------------
